unpackaged/main/default/objects/ProductionOrder__c/ProductionOrder__c.object-meta.xml
<CustomObject>
    <label>Производственный заказ</label>
    <nameField>
        <displayFormat>PO-{000000}</displayFormat>
        <label>Имя заказа</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Производственные заказы</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>