unpackaged/main/default/objects/ProductionOrder__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Контрагент</label>
    <referenceTo>ProjectMember__c</referenceTo>
    <relationshipLabel>Производственные заказы</relationshipLabel>
    <relationshipName>POsQT4</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>