unpackaged/main/default/objects/ProductionOrder__c/fields/AccountContacts__c.field-meta.xml
<CustomField>
    <fullName>AccountContacts__c</fullName>
    <label>Контакты контрагента (ФИО, адрес, тел.)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>