unpackaged/main/default/objects/ProductionOrder__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Адрес объекта</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>