unpackaged/main/default/objects/ProductionOrder__c/fields/DeliveryPay__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPay__c</fullName>
    <label>Оплата доставки</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Нет</fullName>
                <default>true</default>
                <label>Нет</label>
            </value>
            <value>
                <fullName>За счет Покупателя. Покупатель оплачивает счет от транспортной компании</fullName>
            </value>
            <value>
                <fullName>Самовывоз в течение 5 дней после уведомления</fullName>
            </value>
            <value>
                <fullName>Поставщик доставляет своими силами. Стоимость доставки входит в стоимость оборудования</fullName>
            </value>
            <value>
                <fullName>За счет Покупателя. Покупатель оплачивает счет от Тион</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>