unpackaged/main/default/objects/ProductionOrder__c/fields/EquipmentDate__c.field-meta.xml
<CustomField>
    <fullName>EquipmentDate__c</fullName>
    <label>Дата производства оборудования</label>
    <type>Date</type>
</CustomField>