unpackaged/main/default/objects/ProductionOrder__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Объект, название</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Производственные заказы</relationshipLabel>
    <relationshipName>ProductionOrderQOPh</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>