unpackaged/main/default/objects/ProductionOrder__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ответственный за производственный заказ</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PORlQN</relationshipName>
    <type>Lookup</type>
</CustomField>