unpackaged/main/default/objects/ProductionOrder__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Производственный заказ на основе Сметы</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Производственные заказы</relationshipLabel>
    <relationshipName>PO0cEs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>