unpackaged/main/default/objects/ProductionOrder__c/fields/ShipmentDate__c.field-meta.xml
<CustomField>
    <fullName>ShipmentDate__c</fullName>
    <label>Дата отгрузки оборудования на объект</label>
    <type>Date</type>
</CustomField>