unpackaged/main/default/objects/ProductionOrder__c/fields/SubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>SubmissionDate__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <label>Дата представления утвержденной заявки</label>
    <required>true</required>
    <type>Date</type>
</CustomField>