unpackaged/main/default/objects/ProductionOrder__c/fields/UID_1C__c.field-meta.xml
<CustomField>
    <fullName>UID_1C__c</fullName>
    <label>Номер заказа поставщику в 1С</label>
    <length>255</length>
    <type>Text</type>
</CustomField>