unpackaged/main/default/objects/ProductionOrder__c/fields/UserTION__c.field-meta.xml
<CustomField>
    <fullName>UserTION__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Сотрудник, ответственный за заказ</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Производственные заказы</relationshipLabel>
    <relationshipName>POh4RA</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>